# News-Agent

./: .env.example  .gitignore  execution plan.md  pyproject.toml  reels news.md  report.md  run.bat  setup_scheduler.bat  setup_scheduler.ps1
.github/workflows/: scrape.yml
data/: news_agent.db
src/: aggregator.py  build_static.py  config.py  dashboard.py  database.py  main.py  notifier.py  summarizer.py  video_processor.py
src/sources/: education.py  events.py  government.py  instagram_scraper.py  news_publishers.py  openstreetmap.py  twitter_scraper.py  youtube_monitor.py
