[project]
name = "bilaspur-news-agent"
version = "0.1.0"
description = "AI-powered news intelligence agent for Developer Bilaspur"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "playwright>=1.44",
    "google-api-python-client>=2.130",
    "openai>=1.30",
    "apscheduler>=3.10",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "feedparser>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
